--- a/package.json
+++ b/package.json
@@ -3,11 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@googlemaps/react-wrapper": "^1.1.32",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
+    "date-fns": "^2.28.0",
+    "mapbox-gl": "^2.8.2",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.3.1",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.3.1",
+    "react-input-mask": "^2.0.4",
+    "react-map-gl": "^7.0.11",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
