--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "date-fns": "^2.28.0",
-    "mapbox-gl": "^2.8.2",
+    "mapbox-gl": "1.13.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.1.0",
